fix questions (global__item-bg) + add str jobs1 + adaptive

--- a/app/construction.html
+++ b/app/construction.html
@@ -670,35 +670,38 @@
         <div class="questions__inner">
           <div class="container">
 
-            <div class="questions__item global__item-bg questions__item--active" id="questions__title-one">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Какую отделку для бассейна выбрать?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+            <div class="questions__item global__item-bg questions__item--active">
+              <div class="questions__item-inners">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
+                    Какую отделку для бассейна выбрать?
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
                 </div>
-              </div>
 
-              <p class="questions__item-text text">
-                Наша компания специализируется на строительстве
-                <a class="questions__item-link" href="#">бетонных бассейнов</a>.
-                При этом мы
-                предлагаем нашим клиентам два варианта отделки чаши:
-                <a class="questions__item-link" href="#"> мозаикой</a>
-                или
-                <a class="questions__item-link" href="#">плиткой</a>,
-                либо
-                <a class="questions__item-link" href="#">пленкой ПВХ</a>.
-                <br>
-                <br>
-                Если бассейн находится под открытым небом, то лучше применить
-                <a class="questions__item-link" href="#">пленку ПВХ</a>
-              </p>
+                <p class="questions__item-text text">
+                  Наша компания специализируется на строительстве
+                  <a class="questions__item-link" href="#">бетонных бассейнов</a>.
+                  При этом мы
+                  предлагаем нашим клиентам два варианта отделки чаши:
+                  <a class="questions__item-link" href="#"> мозаикой</a>
+                  или
+                  <a class="questions__item-link" href="#">плиткой</a>,
+                  либо
+                  <a class="questions__item-link" href="#">пленкой ПВХ</a>.
+                  <br>
+                  <br>
+                  Если бассейн находится под открытым небом, то лучше применить
+                  <a class="questions__item-link" href="#">пленку ПВХ</a>
+                </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+               <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Что такое скиммерный и переливной бассейн?
@@ -721,9 +724,11 @@
                 привлекательным внешним видом.
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какое оборудование вы можете предложить?
@@ -739,9 +744,11 @@
                 технической возможностью
                 <a class="questions__item-link" href="#">проекта</a>.
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Что делать если чаша дала течь?
@@ -759,9 +766,11 @@
                 <a class="questions__item-link" href="#">«Ремонт
                   и реконструкция»</a>
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Как можно очистить воду в бассейне?
@@ -781,6 +790,7 @@
                 <br> Такой метод очистки воды называется рециркуляционным, когда загрязненная вода после
                 механической и биологической обработки возвращается обратно в бассейн.
               </p>
+            </div>
             </div>
           </div>
 
