--- a/app/design.html
+++ b/app/design.html
@@ -619,7 +619,8 @@
         <div class="questions__inner">
           <div class="container">
 
-            <div class="questions__item global__item-bg questions__item--active" id="questions__title-one">
+            <div class="questions__item global__item-bg questions__item--active">
+               <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Хотим построить коммерческий детский бассейн. С чего начать?
@@ -634,9 +635,11 @@
                 С бизнес планирования и проектирования будущего объекта. Одной из составляющих проекта
                 станет раздел ТХ в который войдет проект чаши и водоподготовки бассейна.
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+               <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Возможна ли эксплуатация детского бассейна без хлора?
@@ -654,9 +657,11 @@
                 поддерживать достаточный потенциал окислителя в воде.
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какая рекомендуемая температура должна быть в детском бассейне?
@@ -671,9 +676,11 @@
                 температура воды 30-320 С. Детям с семи лет и вплоть до подросткового возраста,
                 температурные границы воды могут быть снижены до 29-300 С
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Нужна ли подпитка свежей воды в бассейне?
@@ -687,6 +694,7 @@
                 Обязательно во всех общественных, а тем более в детских бассейнах для обновления воды в чаше
                 должна быть предусмотрена регулярная подпитка свежей водой
               </p>
+            </div>
             </div>
           </div>
 
