--- a/app/pvc.html
+++ b/app/pvc.html
@@ -623,7 +623,8 @@
         <div class="questions__inner">
           <div class="container">
 
-            <div class="questions__item global__item-bg questions__item--active" id="questions__title-one">
+            <div class="questions__item global__item-bg questions__item--active">
+               <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Можно ли облицевать пленкой плиточный бассейн?
@@ -641,9 +642,11 @@
                 чаши специалистом.
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                 <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Можно ли порвать пленку на бассейне?
@@ -660,9 +663,11 @@
                 просто невозможно.
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какие расцветки возможны?
@@ -676,9 +681,11 @@
                 Современное разнообразие оттенков и имитаций фактур впечатляет, ПВХ мембрана поставляется
                 в различных цветах, а также может быть стилизованной под мрамор, мозаику, песок.
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какой срок службы?
@@ -694,9 +701,11 @@
 
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Что произойдет с пленкой в зимний период времени на уличном бассейне?
@@ -713,6 +722,7 @@
 
 
               </p>
+              </div>
             </div>
           </div>
 
