--- a/app/repair.html
+++ b/app/repair.html
@@ -481,7 +481,8 @@
         <div class="questions__inner">
           <div class="container">
 
-            <div class="questions__item global__item-bg questions__item--active" id="questions__title-one">
+            <div class="questions__item global__item-bg questions__item--active">
+              <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Через несколько лет эксплуатации начала отслаиваться мозаика. Что делать?
@@ -499,9 +500,11 @@
                 обследование и последующее экспертное заключение.
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                 Возможно ли оборудовать существующий бассейн новыми аттракционами?
@@ -520,9 +523,11 @@
 
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                 <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                  Что делать если потек бассейн?
@@ -539,9 +544,11 @@
                 гидроизоляции. Для более точного определения причин потребуется обследование объекта специалистом
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                  <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Можно ли заменить старую пленку ПВХ на новую?
@@ -558,9 +565,11 @@
                деталей для продления эксплуатационных качеств и полной гарантии за проделанную работу.
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+               <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Возможно ли на существующую поверхность плитки или мозаики установить пленку ПВХ?
@@ -581,9 +590,11 @@
 
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Возможно ли заменить оборудования в бассейне?
@@ -599,9 +610,11 @@
 
 
               </p>
+              </div>
             </div>
 
             <div class="questions__item global__item-bg">
+                <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                  Хотим усовершенствовать очистку и обработку воды в бассейне
@@ -615,9 +628,11 @@
                 Да, на существующих и действующих бассейнах возможна модернизация фильтровального оборудования и
                 улучшение качества дезинфекции воды либо смена типа дезинфекции
               </p>
+              </div>
             </div>
 
              <div class="questions__item global__item-bg">
+                <div class="questions__item-inners">
                <div class="questions__item-title">
                  <p class="questions__item-title--text">
                    Возможна ли перепланировка плавательного бассейна?
@@ -634,9 +649,11 @@
                  по проведению работ.
 
                </p>
+               </div>
              </div>
 
               <div class="questions__item global__item-bg">
+                 <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
                     Высокие грунтовые воды. Можете ли ваша компания выполнить дренажные работы вокруг бассейна?
@@ -652,6 +669,7 @@
                   объеме о необходимых мероприятиях
 
                 </p>
+                </div>
               </div>
 
 
