add link header and footer

--- a/app/news.html
+++ b/app/news.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container">
       <div class="header__line">
-        <a class="logo" href=#>
+        <a class="logo" href=index.html>
           <img class="logo__img" src="images/logo/logo.png" alt="">
         </a>
         <div class="header__contacts">
@@ -157,64 +157,64 @@
             <div class="menu__wrapper">
               <ul class="menu-mobil">
                 <li class="menu__mobil-list">
-                  <a class="menu__mobil-list--link" href="#">
+                  <a class="menu__mobil-list--link" href="index.html">
                     ГЛАВНАЯ
                   </a>
                 </li>
                 <ul class="menu-mobil-services">
                   <li class="menu__mobil-list">
-                    <a class="menu__mobil-list--link" href="#">
+                    <a class="menu__mobil-list--link" href="design.html">
                       ПРОЕКТИРОВАНИЕ БАССЕЙНОВ
                     </a>
                   </li>
                   <li class="menu__mobil-list">
-                    <a class="menu__mobil-list--link" href="#">
+                    <a class="menu__mobil-list--link" href="construction.html">
                       СТРОИТЕЛЬСТВО БАССЕЙНОВ
                     </a>
                   </li>
                   <li class="menu__mobil-list">
-                    <a class="menu__mobil-list--link" href="#">
+                    <a class="menu__mobil-list--link" href="repair.html">
                       РЕКОНСТРУКЦИЯ И РЕМОНТ БАССЕЙНОВ
                     </a>
                   </li>
                   <li class="menu__mobil-list">
-                    <a class="menu__mobil-list--link" href="#">
+                    <a class="menu__mobil-list--link" href="404.html">
                       ОБСЛУЖИВАНИЕ БАССЕЙНОВ
                     </a>
                   </li>
                 </ul>
                 <li class="menu__mobil-list">
-                  <a class="menu__mobil-list--link" href="#">
+                  <a class="menu__mobil-list--link" href="about.html">
                     О КОМПАНИИ
                   </a>
                 </li>
                 <li class="menu__mobil-list">
-                  <a class="menu__mobil-list--link" href="#">
+                  <a class="menu__mobil-list--link" href="gallery.html">
                     ГАЛЕРЕЯ РАБОТ
                   </a>
                 </li>
                 <li class="menu__mobil-list">
-                  <a class="menu__mobil-list--link" href="#">
+                  <a class="menu__mobil-list--link" href="news.html">
                     НОВОСТИ
                   </a>
                 </li>
                 <li class="menu__mobil-list">
-                  <a class="menu__mobil-list--link" href="#">
+                  <a class="menu__mobil-list--link" href="about.html">
                     КОНТАКТЫ
                   </a>
                 </li>
                 <li class="menu__mobil-list">
-                  <a class="menu__mobil-list--link" href="#">
+                  <a class="menu__mobil-list--link" href="reviews.html">
                     ОТЗЫВЫ
                   </a>
                 </li>
               </ul>
               <div class="menu__mobil-box">
 
-                <a class="global__btn-contact global-btn menu__mobil-btn" href="#">
+                <a class="global__btn-contact global-btn menu__mobil-btn" href="tel:+79210941255">
                   +7 921 094 12 55
                 </a>
-                <a class="global-btn global__btn-mail menu__mobil-btn" href="#">
+                <a class="global-btn global__btn-mail menu__mobil-btn" href="mailto:info@linwa.ru">
                   INFO@LINWA.RU
                 </a>
 
@@ -517,7 +517,7 @@
 
 
           <div class="footer__item footer__item-logo">
-            <a class="logo" href=#>
+            <a class="logo" href="index.html">
               <img class="logo__img" src="images/logo/logo.png" alt="">
             </a>
           </div>
@@ -525,32 +525,32 @@
           <div class="footer__item footer__item-nav">
             <ul class="footer__menu">
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="index.html" class="footer__menu-list--link">
                   ГЛАВНАЯ
                 </a>
               </li>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="about.html" class="footer__menu-list--link">
                   О КОМПАНИИ
                 </a>
               </li>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="gallery.html" class="footer__menu-list--link">
                   ГАЛЕРЕЯ РАБОТ
                 </a>
               </li>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="news.html" class="footer__menu-list--link">
                   НОВОСТИ
                 </a>
               </li>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="jobs.html" class="footer__menu-list--link">
                   ВАКАНСИИ
                 </a>
               </li>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="reviews.html" class="footer__menu-list--link">
                   ОТЗЫВЫ
                 </a>
               </li>
@@ -562,44 +562,44 @@
           <div class="footer__item footer__item-menu">
             <ul class="footer__menu">
               <li class="footer__menu-list">
-                <a class="footer__menu-list--link" href="#">
+                <a class="footer__menu-list--link" href="construction.html">
                   СТРОИТЕЛЬСТВО БАССЕЙНОВ
                 </a>
               </li>
               <ul class="footer__menu-mobil">
                 <li class="footer__menu-mobil__list">
-                  <a class="footer__menu-mobil__list--link" href="#">
+                  <a class="footer__menu-mobil__list--link" href="concrete.html">
                     БЕТОННЫЕ БАССЕЙНЫ
                   </a>
                 </li>
                 <li class="footer__menu-mobil__list">
-                  <a class="footer__menu-mobil__list--link" href="#">
+                  <a class="footer__menu-mobil__list--link" href="mosaic.html">
                     Мозаичные бассейны
                   </a>
                 </li>
                 <li class="footer__menu-mobil__list">
-                  <a class="footer__menu-mobil__list--link" href="#">
+                  <a class="footer__menu-mobil__list--link" href="pvc.html">
                     Плёночные бассейны
                   </a>
                 </li>
                 <li class="footer__menu-mobil__list">
-                  <a class="footer__menu-mobil__list--link" href="#">
+                  <a class="footer__menu-mobil__list--link" href="children.html">
                     детские БАССЕЙНЫ
                   </a>
                 </li>
               </ul>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="design.html" class="footer__menu-list--link">
                   ПРОЕКТИРОВАНИЕ БАССЕЙНОВ
                 </a>
               </li>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="repair.html" class="footer__menu-list--link">
                   РЕКОНСТРУКЦИЯ И РЕМОНТ БАССЕЙНОВ
                 </a>
               </li>
               <li class="footer__menu-list">
-                <a href="#" class="footer__menu-list--link">
+                <a href="404.html" class="footer__menu-list--link">
                   ОБСЛУЖИВАНИЕ БАССЕЙНОВ
                 </a>
               </li>
@@ -626,7 +626,7 @@
               <br>
               ул.Белы Куна, д.30, литер А, оф.520
             </p>
-            <a class="footer__requisites-text" href="#">
+            <a class="footer__requisites-text" href="politics.html">
               Политика конфиденциальности
             </a>
           </div>
@@ -762,10 +762,10 @@
               </ul>
             </div>
             <div class="footer__btn-wrapper">
-              <a class="footer__btn global-btn global__btn-contact" href=#>
+              <a class="footer__btn global-btn global__btn-contact" href="tel:+79210941255">
                 +7 921 094 12 55
               </a>
-              <a class="footer__btn global-btn global__btn-mail" href=#>
+              <a class="footer__btn global-btn global__btn-mail" href="info@linva.ru">
                 INFO@LINWA.RU
               </a>
             </div>
@@ -786,7 +786,7 @@
             <br>
             Копирование, в том числе частичное, запрещено
 
-            <a class="lapki" href="#">Разработка сайта студия lapki-web.ru</a>
+            <a class="lapki" href="https://lapki-web.ru">Разработка сайта студия lapki-web.ru</a>
           </p>
         </div>
       </div>
@@ -796,7 +796,6 @@
 
 
     </footer>
-
 
 
 
