--- a/app/jobs.html
+++ b/app/jobs.html
@@ -360,10 +360,10 @@
 
   <div class="wrapper">
     <main class="main">
-      <section class="start section">
+      <section class="start">
 
         <div class="container">
-          <div class="start__box">
+          <div class="start__box start__box-about">
 
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
@@ -461,7 +461,7 @@
                 <div class="jobs__info-title">
                   <img class="jobs__info-img" src="images/icons/man.png" alt="">
                   <h4 class="jobs__info-name">
-                    Инженер - разработчик радиоэлектронного оборудования
+                    Инженер - разработчик электронного оборудования
                   </h4>
                 </div>
 
