--- a/app/jobs03.html
+++ b/app/jobs03.html
@@ -359,10 +359,10 @@
 
   <div class="wrapper">
     <main class="main">
-      <section class="start section">
+      <section class="start">
 
         <div class="container">
-          <div class="start__box">
+          <div class="start__box start__box-about">
 
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
@@ -385,7 +385,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-                Инженер - разработчик радиоэлектронного оборудования
+                Инженер - разработчик электронного оборудования
               </h1>
               <p class="start__text text">
                 Для курирования проведения работ на объектах компании приглашаем на работу Инженера-электронщика в отдел
