--- a/app/product.html
+++ b/app/product.html
@@ -356,6 +356,8 @@
 
 
 
+
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -371,21 +373,22 @@
                   </a>
                 </li>
                 <li class="breadcrumbs__list-item">
+                  <a class="breadcrumbs__item-link" href="#">
+                    галерея работ
+                  </a>
+                </li>
+                <li class="breadcrumbs__list-item">
                   <div class="breadcrumbs__item-link">
-                    новости компании
+                    домашний бассейн
                   </div>
                 </li>
               </ul>
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-                новости компании
+                01. ДОМАШНИЙ БАССЕЙН
               </h1>
-              <p class="start__text text">
-                В этом разделе вы можете более подробно познакомиться с нашими работами или найти ответы на
-                <br> интерсующие
-                Вас вопросы
-              </p>
+
             </div>
           </div>
         </div>
@@ -393,75 +396,178 @@
       </section>
 
 
-      <section class="news section">
+
+
+
+      <section class="product section">
         <div class="container">
-          <div class="news__item">
-            <img class="news__img" src="images/content/news1.jpg"></img>
-            <div class="news__info">
-              <div class="news__box">
-
-                <h2 class="news__title">
-                  Ремонт мозаичного покрытия чаши (Токсово. Ремонт)
-                </h2>
-                <div class="news__date text">01.05.2022</div>
-                <p class="news__text text">
-                  Недавно к нам обратился заказчик – основная проблема разрушение существующего мозаичного покрытия
-                  железобетонной чаши.
-                  При обследовании чаши были выявлены следующие моменты:
-                       
-                </p>
+          <div class="product__wrapper">
+            <div class="slider-for">
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product1.jpg');"></div>
               </div>
-              <a class="global__btn-contact main-btn global-btn" href="#">
-                ЧИТАТЬ БОЛЬШЕ
-              </a>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product2.jpg');"></div>
+              </div>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product3.jpg');"></div>
+              </div>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product4.jpg');"></div>
+              </div>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product5.jpg');"></div>
+              </div>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product6.jpg');"></div>
+              </div>
             </div>
+
+            <div class="product__box">
+              <p class="product__text text">
+                Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой,
+                плавно спускается в воду. Бассейн оборудован автоматической станцией дозирования
+                химреагентов. Подогрев воды организован от газового котла.
+               
+
+              </p>
+              <div class="product__inner">
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Длина
+                  </li>
+                  <li class="product__descr">
+                    6,0 метра
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Ширина
+                  </li>
+                  <li class="product__descr">
+                    3,5 метра
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Глубина
+                  </li>
+                  <li class="product__descr">
+                    1,1 - 1,7 метра
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Чаша
+                  </li>
+                  <li class="product__descr">
+                    бетон
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Отделка
+                  </li>
+                  <li class="product__descr">
+                    мозаика
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Фильтрация
+                  </li>
+                  <li class="product__descr">
+                    скиммерная схема
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Дезинфекция
+
+                  </li>
+                  <li class="product__descr">
+                    автоматическая станция
+                    дозирования
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Аттракционы
+                  </li>
+                  <li class="product__descr">
+                    гейзер, противоток,
+                    водопад, подсветка
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Сдача объекта
+                  </li>
+                  <li class="product__descr">
+                    май 2019
+                  </li>
+                </ul>
+                <ul class="product__inners text">
+                  <li class="product__feature">
+                    Стоимость работ
+                    по отделке бетонной чаши
+                    и монтажу оборудования
+                  </li>
+                  <li class="product__descr">
+                    1 149 000 руб
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+
           </div>
 
-          <div class="news__item">
-            <img class="news__img" src="images/content/news1.jpg"></img>
-            <div class="news__info">
-              <div class="news__box">
-
-                <h2 class="news__title">
-                  Ремонт мозаичного покрытия чаши (Токсово. Ремонт)
-                </h2>
-                <div class="news__date text">01.05.2022</div>
-                <p class="news__text text">
-                  Недавно к нам обратился заказчик – основная проблема разрушение существующего мозаичного покрытия
-                  железобетонной чаши.
-                  При обследовании чаши были выявлены следующие моменты:
-
-                </p>
-              </div>
-              <a class="global__btn-contact main-btn global-btn" href="#">
-                ЧИТАТЬ БОЛЬШЕ
-              </a>
+          <div class="slider-nav">
+            <div class="product2">
+              <img class="product2-img" src="images/content/product1.jpg" alt="">
             </div>
+            <div class="product2">
+              <img class="product2-img" src="images/content/product2.jpg" alt="">
+            </div>
+            <div class="product2">
+              <img class="product2-img" src="images/content/product3.jpg" alt="">
+            </div>
+            <div class="product2">
+              <img class="product2-img" src="images/content/product4.jpg" alt="">
+            </div>
+            <div class="product2">
+              <img class="product2-img" src="images/content/product5.jpg" alt="">
+            </div>
+            <div class="product2">
+              <img class="product2-img" src="images/content/product6.jpg" alt="">
+            </div>
+
           </div>
 
-          <div class="news__item">
-            <img class="news__img" src="images/content/news1.jpg"></img>
-            <div class="news__info">
-              <div class="news__box">
-
-                <h2 class="news__title">
-                  Ремонт мозаичного покрытия чаши (Токсово. Ремонт)
-                </h2>
-                <div class="news__date text">01.05.2022</div>
-                <p class="news__text text">
-                  Недавно к нам обратился заказчик – основная проблема разрушение существующего мозаичного покрытия
-                  железобетонной чаши.
-                  При обследовании чаши были выявлены следующие моменты:
-
-                </p>
-              </div>
-              <a class="global__btn-contact main-btn global-btn" href="#">
-                ЧИТАТЬ БОЛЬШЕ
-              </a>
-            </div>
+          <div class="global__inner-btn">
+            <a class="global__btn-contact main-btn global-btn" href="#">
+              Смотреть другие проекты
+            </a>
           </div>
         </div>
       </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -796,6 +902,7 @@
 
 
     </footer>
+
 
 
 
