--- a/app/reviews.html
+++ b/app/reviews.html
@@ -361,10 +361,10 @@
 
   <div class="wrapper">
     <main class="main">
-      <section class="start section">
+      <section class="start">
 
         <div class="container">
-          <div class="start__box">
+          <div class="start__box start__box-about">
 
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
@@ -403,9 +403,6 @@
 
        <section class="reviews section">
 
-        <h2 class="reviews__title title">
-          ОТЗЫВЫ
-        </h2>
         <div class="reviews__wrapper">
           <div class="reviews__slider__inner">
 
