--- a/app/jobs02.html
+++ b/app/jobs02.html
@@ -359,10 +359,10 @@
 
   <div class="wrapper">
     <main class="main">
-      <section class="start section">
+      <section class="start">
 
         <div class="container">
-          <div class="start__box">
+          <div class="start__box start__box-about">
 
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
